# openid-connect-flask-template

./: README.md  app.yaml  client_secrets.json  pyproject.toml  requirements.txt
application/: extensions.py  main.py  webapp.py
