[tool.poetry]
name = "openid-connect-flask-template"
version = "0.1.0"
description = ""
authors = ["James Collier <james.collier@vib.be>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.4.4"
Flask-OIDC = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
